# web-stalker

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  update_and_restart.sh
src/: cli.py  config.py  db.py  scheduler.py  scraper.py  screenshot.py  telegram_sender.py  utils.py
tests/: conftest.py  test_cli.py  test_db.py  test_scheduler.py  test_scraper.py  test_screenshot.py  test_telegram_sender.py  test_validation.py
